// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Renderers #autonomousSystemRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 .euiPopover__anchor {
  width: 100%;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class=""
      >
        <div
          class="euiPopover c0 emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <div
              data-test-subj="withHoverActionsButton"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_organization_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.organization.name"
                >
                  <span
                    class="euiToolTipAnchor"
                  >
                    Test Org
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      /
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class=""
      >
        <div
          class="euiPopover c0 emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <div
              data-test-subj="withHoverActionsButton"
            >
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_number"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.as.number"
                >
                  <span
                    class="euiToolTipAnchor"
                  >
                    12345
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #dateRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <span
    class="euiToolTipAnchor"
  >
    Feb 7, 2019 @ 17:19:41.636
  </span>
</DocumentFragment>
`;

exports[`Field Renderers #hostIdRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 .euiPopover__anchor {
  width: 100%;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class=""
  >
    <div
      class="euiPopover c0 emotion-euiPopover"
    >
      <div
        class="euiPopover__anchor css-16vtueo-render"
      >
        <div
          data-test-subj="withHoverActionsButton"
        >
          <div
            data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.name"
            >
              <span
                class="euiToolTipAnchor"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="host-details-button"
                  href="securitySolutionUI/hosts/name/raspberrypi"
                  rel="noreferrer"
                >
                  raspberrypi
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #hostNameRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 .euiPopover__anchor {
  width: 100%;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class=""
  >
    <div
      class="euiPopover c0 emotion-euiPopover"
    >
      <div
        class="euiPopover__anchor css-16vtueo-render"
      >
        <div
          data-test-subj="withHoverActionsButton"
        >
          <div
            data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
            tabindex="-1"
          >
            <span
              class="c1"
              data-test-subj="render-content-host.name"
            >
              <span
                class="euiToolTipAnchor"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="host-details-button"
                  href="securitySolutionUI/hosts/name/raspberrypi"
                  rel="noreferrer"
                >
                  raspberrypi
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #locationRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 .euiPopover__anchor {
  width: 100%;
}

.c1 > span.euiToolTipAnchor {
  display: block;
}

.c1 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class=""
      >
        <div
          class="euiPopover c0 emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <div
              data-test-subj="withHoverActionsButton"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_city_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.city_name"
                >
                  <span
                    class="euiToolTipAnchor"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    , 
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class=""
      >
        <div
          class="euiPopover c0 emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <div
              data-test-subj="withHoverActionsButton"
            >
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_region_name"
                tabindex="-1"
              >
                <span
                  class="c1"
                  data-test-subj="render-content-source.geo.region_name"
                >
                  <span
                    class="euiToolTipAnchor"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #reputationRenderer it renders correctly against snapshot 1`] = `<DocumentFragment />`;

exports[`Field Renderers #whoisRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <span
    class="euiToolTipAnchor"
  >
    <a
      class="euiLink emotion-euiLink-primary"
      data-test-subj="externalLink"
      href="https://www.iana.org/whois?q=10.10.10.10"
      rel="noopener noreferrer"
      target="_blank"
    >
      iana.org
      <span
        class="emotion-euiLink__externalIcon"
        data-euiicon-type="popout"
      >
        External link
      </span>
      <span
        class="emotion-euiScreenReaderOnly-euiLink__screenReaderText"
      >
        (opens in a new tab or window)
      </span>
    </a>
  </span>
</DocumentFragment>
`;
